force-app/main/default/objects/Adhoc_POS_Services__c/Adhoc_POS_Services__c.object-meta.xml
<CustomObject>
    <label>Adhoc POS Services</label>
    <nameField>
        <label>Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adhoc POS Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>