force-app/main/default/objects/Adhoc_POS_Services__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Adhoc POS Services</relationshipLabel>
    <relationshipName>Adhoc_POS_Services</relationshipName>
    <type>Lookup</type>
</CustomField>