force-app/main/default/objects/Adhoc_POS_Services__c/fields/Per_unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Per_unit_Price__c</fullName>
    <label>Per unit Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>